--- a/program/app/src/main/res/values/strings.xml
+++ b/program/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="fb_login_protocol_scheme">fb526498191468722</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="open_nav">Open Navigation Drawer</string>
+    <string name="close_nav">Close Navigation Drawer</string>
 </resources>
