--- a/program/app/src/main/res/values/strings.xml
+++ b/program/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="open_nav">Open Navigation Drawer</string>
     <string name="close_nav">Close Navigation Drawer</string>
     <string name="text3">"Pantai Mutun hanya berjarak 25 kilometer dari Kota Bandar Lampung yang dapat ditempuh dengan berkendara selama 30 menit. Di dekat pantai ini terdapat pula Pulau Tangkil, sebuah destinasi wisata pulau alami yang masih terjaga kealamiannya. Untuk menjangkau pulau Tangkil, disediakan perahu oleh pengelola pantai. "</string>
+    <string name="text4">Pulau Pahawang merupakan salah satu wisata andalan yang dimiliki oleh Provinsi Lampung, tepatnya berlokasi di Kecamatan Punduh Pidada, Kabupaten Pesawaran, Lampung.\nuntuk mencapai Pulau Pahawang kamu perlu menyeberang dengan kapal dari Dermaga Ketapang terlebih dahulu. Untuk mencapai Dermaga Ketapang kamu bisa menggunakan berbagai moda transportasi seperti kendaraan pribadi roda dua atau roda empat</string>
 </resources>
